\name{NEWS}
\title{News for Package 'mboost'}

\section{Changes in mboost version 2.4-3 (2015-03-20)}{
  \subsection{User-visible changes}{
    \itemize{
      \item Added documentation for \code{plot.mboost} function and moved
      documentation of \code{plot.glmboost} to the same help page.
      Resolves issue \href{https://github.com/hofnerb/mboost/issues/11}{#11}.
    }
  }
  \subsection{Miscellaneous}{
    \itemize{
      \item \code{PropOdds()}: Updated manual for proportional odds model.
      \item \code{Multinomial()}: Updated manual for multinomial logit
      model. Predictions for new data are now
      possible (resolves issue
      \href{https://github.com/hofnerb/mboost/issues/13}{#13}, thanks to
      Sarah Brockhaus).
      \item \file{inst/CITATION}: Added subheadings and
      tutorial paper.
    }
  }
  \subsection{Bug-fixes}{
    \itemize{
      \item Fixed bug in \code{PropOdds()} which occured if
      \code{offset} was specified: nuisance parameters \code{delta}
      and \code{sigma} were not properly initialized.
      \item Truncate output of complete data structure when model is
      printed. Resolves issue
      \href{https://github.com/hofnerb/mboost/issues/11}{#11}.
    }
  }
}

\section{Changes in mboost version 2.4-2 (2015-02-12)}{
  \subsection{User-visible changes}{
    \itemize{
      \item Export \code{df2lambda}, \code{hyper_bbs} and \code{bl_lin}
        to make package \pkg{FDboost} happy. Note: These functions
	usually should not be called directly by users.
    }
  }
  \subsection{Miscellaneous}{
    \itemize{
      \item Added Hothorn et al (2010) to \file{inst/CITATION}
    }
  }
  \subsection{Bug-fixes}{
    \itemize{
      \item Changes in \file{inst/CITATION} to make CRAN happy:
        Citations can now be extracted without the need to install the
        package.
      \item Removed \code{EISPACK = FALSE} from \code{eigen()} as the
        argument is defunct and ignored.